[package]
name = "nvram_editor"
version = "0.1.0"
edition = "2021"
description = "Windows GUI for AMI BIOS nvram.txt (SCEWIN/SCEHUB): edit settings, export from board, import with UAC, presets."
readme = "README.md"
build = "build.rs"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
encoding_rs = "0.8.35"
regex = "1.11.1"
rfd = "0.17.2"
raw-window-handle = "0.6"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
image = { version = "0.25.10", default-features = false, features = ["bmp", "ico", "png"] }

[build-dependencies]
winresource = "0.1"
